cabal-version:      3.0
name:               bluefin-examples
version:            0.0.0.0
license:            MIT
license-file:       LICENSE
author:             Tom Ellis
maintainer:         Tom Ellis
build-type:         Simple
extra-doc-files:    CHANGELOG.md
description:        The Bluefin effect system, examples
synopsis:           The Bluefin effect system, examples
homepage:           https://github.com/tomjaguarpaw/bluefin
bug-reports:        https://github.com/tomjaguarpaw/bluefin/issues

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Bluefin.Examples.DB
    build-depends:
      base, bluefin >= 0.0.6.0 && < 0.1
    hs-source-dirs:   src
    default-language: Haskell2010
