cabal-version:      3.0
name:               bluefin-examples
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Tom Ellis
maintainer:         Tom Ellis
build-type:         Simple
extra-doc-files:    CHANGELOG.md
description:        The Bluefin effect system, examples
synopsis:           The Bluefin effect system, examples
homepage:           https://github.com/tomjaguarpaw/bluefin
bug-reports:        https://github.com/tomjaguarpaw/bluefin/issues

common warnings
    ghc-options: -Wall
    default-extensions:
      -- GHC2021
      BangPatterns
      BinaryLiterals
      ConstrainedClassMethods
      ConstraintKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DoAndIfThenElse
      EmptyCase
      EmptyDataDecls
      EmptyDataDeriving
      ExistentialQuantification
      ExplicitForAll
      -- Not available until 9.2
      -- FieldSelectors
      FlexibleContexts
      FlexibleInstances
      ForeignFunctionInterface
      GADTSyntax
      GeneralisedNewtypeDeriving
      HexFloatLiterals
      ImplicitPrelude
      ImportQualifiedPost
      InstanceSigs
      KindSignatures
      MonomorphismRestriction
      MultiParamTypeClasses
      NamedFieldPuns
      NamedWildCards
      NumericUnderscores
      PatternGuards
      PolyKinds
      PostfixOperators
      RankNTypes
      RelaxedPolyRec
      ScopedTypeVariables
      StandaloneDeriving
      StandaloneKindSignatures
      StarIsType
      TraditionalRecordSyntax
      TupleSections
      TypeApplications
      TypeOperators
      TypeSynonymInstances
      NoExplicitNamespaces
      -- Others
      DataKinds
      DerivingStrategies
      GADTs
      LambdaCase

library
    import:           warnings
    exposed-modules:
      Bluefin.Examples.DB,
      Bluefin.Examples.Random,
      Bluefin.Examples.Stream.InsideAndOut,
      Bluefin.Examples.Stream.Many,
      Bluefin.Examples.Terminal
    build-depends:
      base,
      bytestring,
      random >= 1.3 && < 2,
      bluefin >= 0.0.12.0 && < 0.1,
      bluefin-random >= 0.0.16.0 && < 0.1
    hs-source-dirs:   src
    default-language: Haskell2010
