cabal-version:      3.0
name:               bluefin-internal
version:            0.3.3.0
license:            MIT
license-file:       LICENSE
author:             Tom Ellis
maintainer:         Tom Ellis
build-type:         Simple
extra-doc-files:    CHANGELOG.md
description:        The Bluefin effect system, internals
synopsis:           The Bluefin effect system, internals
homepage:           https://github.com/tomjaguarpaw/bluefin
bug-reports:        https://github.com/tomjaguarpaw/bluefin/issues

common defaults
    ghc-options: -Wall
    default-extensions:
      -- GHC2021
      BangPatterns
      BinaryLiterals
      ConstrainedClassMethods
      ConstraintKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DoAndIfThenElse
      EmptyCase
      EmptyDataDecls
      EmptyDataDeriving
      ExistentialQuantification
      ExplicitForAll
      -- Not available until 9.2
      -- FieldSelectors
      FlexibleContexts
      FlexibleInstances
      ForeignFunctionInterface
      GADTSyntax
      GeneralisedNewtypeDeriving
      HexFloatLiterals
      ImplicitPrelude
      ImportQualifiedPost
      InstanceSigs
      KindSignatures
      MonomorphismRestriction
      MultiParamTypeClasses
      NamedFieldPuns
      NamedWildCards
      NumericUnderscores
      PatternGuards
      PolyKinds
      PostfixOperators
      RankNTypes
      RelaxedPolyRec
      ScopedTypeVariables
      StandaloneDeriving
      StandaloneKindSignatures
      StarIsType
      TraditionalRecordSyntax
      TupleSections
      TypeApplications
      TypeOperators
      TypeSynonymInstances
      NoExplicitNamespaces
      -- Others
      DataKinds
      DerivingStrategies
      GADTs
      LambdaCase

library
    import:           defaults
    default-language: Haskell2010
    hs-source-dirs: src
    build-depends:
      async >= 2.2 && < 2.3,
      base >= 4.14 && < 4.23,
      unliftio-core < 0.3,
      transformers < 0.7,
      transformers-base < 0.5,
      monad-control < 1.1
    exposed-modules:
      Bluefin.Internal,
      Bluefin.Internal.CloneableHandle,
      Bluefin.Internal.DslBuilder,
      Bluefin.Internal.DslBuilderEffects,
      Bluefin.Internal.Examples,
      Bluefin.Internal.Exception.Scoped,
      Bluefin.Internal.FunctorCoroutine,
      Bluefin.Internal.Key,
      Bluefin.Internal.OneWayCoercible,
      Bluefin.Internal.Pipes,
      Bluefin.Internal.System.IO

test-suite bluefin-test
    import:           defaults
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        bluefin-internal
