cabal-version:      3.0
name:               bluefin-nospec
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Tom Ellis
maintainer:         tom-git@jaguarpaw.co.uk
build-type:         Simple

common warnings
    ghc-options: -Wall

executable bluefin-nospec
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, bluefin-internal
    hs-source-dirs:   app
    default-language: Haskell2010
