cabal-version:      3.0
name:               bluefin-random
version:            0.0.16.0
license:            MIT
license-file:       LICENSE
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import: warnings
    default-extensions:
      DataKinds
      DerivingVia
      FlexibleInstances
      GeneralizedNewtypeDeriving
      MultiParamTypeClasses
      NoImplicitPrelude
      RankNTypes
      TypeFamilies
      TypeOperators
    exposed-modules:
      Bluefin.Random
    build-depends:
      base >= 4.12 && < 4.22,
      random >= 1.3 && < 2,
      bluefin >= 0.0.16.0 && < 0.1
    hs-source-dirs: src
    default-language: Haskell2010
