cabal-version:      3.0
name:               bluefin
version:            0.0.0.0
license:            MIT
license-file:       LICENSE
author:             Tom Ellis
maintainer:         tom-git@jaguarpaw.co.uk
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Bluefin,
      Bluefin.Compound,
      Bluefin.Coroutine,
      Bluefin.EarlyReturn,
      Bluefin.Eff,
      Bluefin.Exception,
      Bluefin.Jump,
      Bluefin.IO,
      Bluefin.State,
      Bluefin.Stream,
    build-depends:
      base >= 4.12 && < 4.20,
      bluefin-internal
    hs-source-dirs:   src
    default-language: Haskell2010
