cabal-version:      3.0
name:               bluefin
version:            0.2.5.0
license:            MIT
license-file:       LICENSE
author:             Tom Ellis
maintainer:         Tom Ellis
build-type:         Simple
extra-doc-files:    CHANGELOG.md
description:        The Bluefin effect system
synopsis:           The Bluefin effect system
homepage:           https://github.com/tomjaguarpaw/bluefin
bug-reports:        https://github.com/tomjaguarpaw/bluefin/issues

common warnings
    ghc-options: -Wall

library
    import: warnings
    default-extensions:
      NoImplicitPrelude
    exposed-modules:
      Bluefin,
      Bluefin.Compound,
      Bluefin.Consume,
      Bluefin.Coroutine,
      Bluefin.CloneableHandle,
      Bluefin.DslBuilder,
      Bluefin.EarlyReturn,
      Bluefin.Eff,
      Bluefin.Exception,
      Bluefin.HandleReader,
      Bluefin.IO,
      Bluefin.Jump,
      Bluefin.Pipes,
      Bluefin.Pipes.Prelude,
      Bluefin.Reader,
      Bluefin.State,
      Bluefin.StateSource,
      Bluefin.Stream,
      Bluefin.System.IO,
      Bluefin.Writer,
    build-depends:
      bluefin-internal >= 0.3.3.0 && < 0.4
    hs-source-dirs:   src
    default-language: Haskell2010
